--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker
-        run: docker build -t ghcr.io/vlad_nemo/docker04.12/node-app:latest .
+        run: docker build -t ghcr.io/vlad-nemo/docker04.12/node-app:latest .
 
       - name: Push Docker
         run: docker push ghcr.io/vlad_nemo/docker04.12/node-app:latest 
