--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,4 +35,4 @@ jobs:
         run: docker build -t ghcr.io/vlad-nemo/docker04.12/node-app:latest .
 
       - name: Push Docker
-        run: docker push ghcr.io/vlad_nemo/docker04.12/node-app:latest 
+        run: docker push ghcr.io/vlad-nemo/docker04.12/node-app:latest 
